--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "heroku-postbuild": "gatsby build"
   }
 }
